--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
       base-url: http://216.250.104.100:18080
       embedding:
         model: qwen3-embedding:4b
+      chat:
+        model: qwen3:30b
     vectorstore:
       qdrant:
         host: 216.250.104.100
@@ -17,5 +19,10 @@ server:
   port: 8786
 comfyUi:
   base-url: http://216.250.104.100:18188
-  default-timeout: 600
+  default-timeout: 60
+
+sohu:
+  base-url: https://uis.mp.sohu.com
+  default-count: 100
+
 
